cabal-version: 3.0
name:          plutus-cardano-api-codec
version:       0.1.0
synopsis:      Codec to convert between Plutus and Cardano API types
homepage:      https://github.com/mlabs-haskell/hydra-auction
author:        MLabs
maintainer:    info@mlabs.city
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/hydra-auction

-- Recommendations from the MLabs styleguide
-- https://github.com/mlabs-haskell/styleguide/
common mlabs-styleguide-config
  default-language:   Haskell2010

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wredundant-constraints
    -Werror

-- Combined configuration for off-chain code
common offchain-config
  import: mlabs-styleguide-config

  default-extensions:
    PatternSynonyms
    RecordWildCards
    Strict

  ghc-options:
    -fobject-code

library
  import:          offchain-config
  hs-source-dirs:  src
  exposed-modules:
    Plutus.Cardano.Api.Codec
    Plutus.Cardano.Api.Codec.Address
    Plutus.Cardano.Api.Codec.Base
    Plutus.Cardano.Api.Codec.Crypto
    Plutus.Cardano.Api.Codec.Script
    Plutus.Cardano.Api.Codec.Time
    Plutus.Cardano.Api.Codec.Value
    Plutus.Cardano.Api.Types.Time.Millisecond

  build-depends:
    -- , aeson
    , base
    , bytestring
    , cardano-api             >=8.20.0 && <8.21
    -- , cardano-binary          >=1.7.0  && <1.8
    , cardano-crypto-class    >=2.1.1  && <2.2
    -- , cardano-ledger-allegra  >=1.2.1  && <1.3
    , cardano-ledger-alonzo   >=1.4    && <1.5
    -- , cardano-ledger-api      >=1.5    && <1.6
    -- , cardano-ledger-babbage  >=1.4.2  && <1.5
    -- , cardano-ledger-binary   >=1.1.1  && <1.2
    -- , cardano-ledger-byron    >=1.0.0  && <1.1
    , cardano-ledger-core     >=1.6    && <1.7
    , cardano-ledger-mary     >=1.3.1  && <1.4
    -- , cardano-ledger-shelley  >=1.6    && <1.7
    -- , containers
    , plutus-ledger-api
    , plutus-tx
    , text
    , time
