cabal-version: 3.6
name:          hydra-auction-error
version:       0.1.0
synopsis:      Hydra Auction Error Types
homepage:      https://github.com/mlabs-haskell/hydra-auction
author:        MLabs
maintainer:    info@mlabs.city
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

-- Recommendations from the MLabs styleguide
-- https://github.com/mlabs-haskell/styleguide/
common mlabs-styleguide-config
  default-language:   GHC2021

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    GADTs
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    UndecidableInstances

  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wredundant-constraints
    -Werror

common error-config
  import: mlabs-styleguide-config

  default-extensions:
    Strict

  ghc-options:
    -fobject-code

library
  import: error-config
  hs-source-dirs:  src
  exposed-modules:
    HydraAuction.Error
    HydraAuction.Error.Onchain.MintingPolicies.AuctionMp
    HydraAuction.Error.Onchain.Validators.AuctionEscrow
    HydraAuction.Error.Onchain.Validators.AuctionMetadata
    HydraAuction.Error.Onchain.Validators.BidderDeposit
    HydraAuction.Error.Onchain.Validators.FeeEscrow
    HydraAuction.Error.Onchain.Validators.StandingBid
    HydraAuction.Error.Types.AuctionEscrowState
    HydraAuction.Error.Types.AuctionInfo
    HydraAuction.Error.Types.AuctionTerms
    HydraAuction.Error.Types.BidderInfo
    HydraAuction.Error.Types.BidTerms
    HydraAuction.Error.Types.DelegateInfo
    HydraAuction.Error.Types.StandingBidState

  build-depends:
    , base
    , safe
    , template-haskell
    , text
    , universe
